--- a/planet.html
+++ b/planet.html
@@ -7,15 +7,19 @@
         <link rel="stylesheet" href="./planet.css" />
     </head>
     <body>
-        <header class="header--container">
+        <aside class="aside--container">
             <div class="header--circle1"></div>
             <div class="header--circle2"></div>
             <div class="header--circle3"></div>
+        </aside>
+
+        <header class="header--container">
+            <h1 class="description--name">Jorden</h1>
+            <h2 class="description--latin">Tellus</h2>
         </header>
+
         <main class="main--container">
             <section class="main--description">
-                <h1 class="description--name">Jorden</h1>
-                <h2 class="description--latin">Tellus</h2>
                 <p class="description--text">
                     Jorden är den största och mest kompakta av de inre
                     planeterna. Jorden är den enda av planeterna som
@@ -44,6 +48,7 @@
                 <p class="moons__p">Månen</p>
             </section>
         </main>
+        
         <footer class="footer--container">
             <p class="footer--copyright">&copyGroup 3</p>
         </footer>
