--- a/planet.html
+++ b/planet.html
@@ -7,51 +7,55 @@
         <link rel="stylesheet" href="./planet.css" />
     </head>
     <body>
-        <aside class="aside--container">
-            <div class="header--circle1"></div>
-            <div class="header--circle2"></div>
-            <div class="header--circle3"></div>
-        </aside>
+        <div class="aside--circle1"></div>
 
-        <header class="header--container">
-            <h1 class="description--name">Jorden</h1>
-            <h2 class="description--latin">Tellus</h2>
-        </header>
+        <!-- <aside class="aside--container">
+            <div class="aside--circle2"></div>
+            <div class="aside--circle3"></div>
+        </aside> -->
 
-        <main class="main--container">
-            <section class="main--description">
-                <p class="description--text">
-                    Jorden är den största och mest kompakta av de inre
-                    planeterna. Jorden är den enda av planeterna som
-                    konstaterats ha geologisk aktivitet och är även den enda
-                    planeten som med säkerhet härbärgerar liv. Dess flytande
-                    hydrosfär är unik bland stenplaneterna och jorden är också
-                    den enda planeten hos vilken plattektonik har observerats.
-                    Jordens atmosfär skiljer sig markant från de andra
-                    planeternas, vilket förklaras av att närvaron av levande
-                    organismer har förändrat atmosfären till att innehålla fritt
-                    syre, i dag motsvarande 21 procent.
-                </p>
-            </section>
-            <section class="main--data">
-                <h3 class="data__h3--circumference">OMKRETS</h3>
-                <p class="data__p--circumference">40 075 km</p>
-                <h3 class="data__h3--distance">KM FRÅN SOLEN</h3>
-                <p class="data__p--distance">149 600 000 km</p>
-                <h3 class="data__h3--max-temp">MAX TEMPERATUR</h3>
-                <p class="data__p--max-temp">60C</p>
-                <h3 class="data__h3--min-temp">MIN TEMPERATUR</h3>
-                <p class="data__p--min-temp">-50C</p>
-            </section>
-            <section class="main--moons">
-                <h3 class="moons__h3">MÅNAR</h3>
-                <p class="moons__p">Månen</p>
-            </section>
-        </main>
-        
-        <footer class="footer--container">
-            <p class="footer--copyright">&copyGroup 3</p>
-        </footer>
+        <section class="content--container">
+            <header class="header--container">
+                <h1 class="description--name">Jorden</h1>
+                <h2 class="description--latin">Tellus</h2>
+            </header>
+
+            <main class="main--container">
+                <section class="main--description">
+                    <p class="description--text">
+                        Jorden är den största och mest kompakta av de inre
+                        planeterna. Jorden är den enda av planeterna som
+                        konstaterats ha geologisk aktivitet och är även den enda
+                        planeten som med säkerhet härbärgerar liv. Dess flytande
+                        hydrosfär är unik bland stenplaneterna och jorden är
+                        också den enda planeten hos vilken plattektonik har
+                        observerats. Jordens atmosfär skiljer sig markant från
+                        de andra planeternas, vilket förklaras av att närvaron
+                        av levande organismer har förändrat atmosfären till att
+                        innehålla fritt syre, i dag motsvarande 21 procent.
+                    </p>
+                </section>
+                <section class="main--data">
+                    <h3 class="data__h3--circumference">OMKRETS</h3>
+                    <p class="data__p--circumference">40 075 km</p>
+                    <h3 class="data__h3--distance">KM FRÅN SOLEN</h3>
+                    <p class="data__p--distance">149 600 000 km</p>
+                    <h3 class="data__h3--max-temp">MAX TEMPERATUR</h3>
+                    <p class="data__p--max-temp">60C</p>
+                    <h3 class="data__h3--min-temp">MIN TEMPERATUR</h3>
+                    <p class="data__p--min-temp">-50C</p>
+                </section>
+                <section class="main--moons">
+                    <h3 class="moons__h3">MÅNAR</h3>
+                    <p class="moons__p">Månen</p>
+                </section>
+            </main>
+
+            <footer class="footer--container">
+                <p class="footer--copyright">&copyGroup 3</p>
+            </footer>
+        </section>
+
         <script src="./planet.js"></script>
     </body>
 </html>
