refactor: HTML planet structure

--- a/planet.html
+++ b/planet.html
@@ -7,12 +7,11 @@
         <link rel="stylesheet" href="./planet.css" />
     </head>
     <body>
-        <div class="aside--circle1"></div>
-
-        <!-- <aside class="aside--container">
+        <aside class="aside--container">
+            <div class="aside--circle1"></div>
             <div class="aside--circle2"></div>
             <div class="aside--circle3"></div>
-        </aside> -->
+        </aside>
 
         <section class="content--container">
             <header class="header--container">
