--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -26,5 +26,7 @@
         <figure><img src="" alt="planet img" /></figure>
       </div>
     </section>
+    <script src="/app.js"></script>
+    <script src="./favorites.js"></script>
   </body>
 </html>
