working on getting the right background color for the planets

--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -9,24 +9,7 @@
   </head>
   <body>
     <h1>FAVORITER</h1>
-    <section class="favorites-card-wrapper">
-      <div class="favorites-card">
-        <h2>Planet name</h2>
-        <figure><img src="" alt="planet img" /></figure>
-      </div>
-      <div class="favorites-card">
-        <h2>Planet name</h2>
-        <figure><img src="" alt="planet img" /></figure>
-      </div>
-      <div class="favorites-card">
-        <h2>Planet name</h2>
-        <figure><img src="" alt="planet img" /></figure>
-      </div>
-      <div class="favorites-card">
-        <h2>Planet name</h2>
-        <figure><img src="" alt="planet img" /></figure>
-      </div>
-    </section>
+    <section class="favorites-card-wrapper"></section>
     <script src="/app.js"></script>
     <script src="./favorites.js"></script>
   </body>
