feat: Fonts and background

--- a/planet.html
+++ b/planet.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="./planet.css" />
     </head>
     <body>
+        <figure class="starry-background">
+            <img src="./assets/star-transparent.png" alt="" />
+        </figure>
         <aside class="aside--container">
             <div class="aside--circle1"></div>
             <div class="aside--circle2"></div>
@@ -35,14 +38,22 @@
                     </p>
                 </section>
                 <section class="main--data">
-                    <h3 class="data__h3--circumference">OMKRETS</h3>
-                    <p class="data__p--circumference">40 075 km</p>
-                    <h3 class="data__h3--distance">KM FRÅN SOLEN</h3>
-                    <p class="data__p--distance">149 600 000 km</p>
-                    <h3 class="data__h3--max-temp">MAX TEMPERATUR</h3>
-                    <p class="data__p--max-temp">60C</p>
-                    <h3 class="data__h3--min-temp">MIN TEMPERATUR</h3>
-                    <p class="data__p--min-temp">-50C</p>
+                    <article class="data--circumference">
+                        <h3 class="circumference__h3">OMKRETS</h3>
+                        <p class="circumference__p">40 075 km</p>
+                    </article>
+                    <article class="data--distance">
+                        <h3 class="distance__h3">KM FRÅN SOLEN</h3>
+                        <p class="distance__p">149 600 000 km</p>
+                    </article>
+                    <article class="data--max-temp">
+                        <h3 class="max-temp__h3">MAX TEMPERATUR</h3>
+                        <p class="max-temp__p">60C</p>
+                    </article>
+                    <article class="data--min-temp">
+                        <h3 class="min-temp__h3">MIN TEMPERATUR</h3>
+                        <p class="min-temp__p">-50C</p>
+                    </article>
                 </section>
                 <section class="main--moons">
                     <h3 class="moons__h3">MÅNAR</h3>
