feat: Dynanmic planet info

--- a/planet.html
+++ b/planet.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <figure class="starry-background">
-            <img src="./assets/star-transparent.png" alt="" />
+            <img src="./assets/star-transparent.png" alt="Stars" />
         </figure>
         <aside class="aside--container">
             <div class="aside--circle1"></div>
@@ -19,45 +19,34 @@
         <section class="content--container">
             <header class="header--container">
                 <h1 class="description--name">Jorden</h1>
+                <button class="favourite__button">Favourite</button>
                 <h2 class="description--latin">Tellus</h2>
             </header>
 
             <main class="main--container">
                 <section class="main--description">
-                    <p class="description--text">
-                        Jorden är den största och mest kompakta av de inre
-                        planeterna. Jorden är den enda av planeterna som
-                        konstaterats ha geologisk aktivitet och är även den enda
-                        planeten som med säkerhet härbärgerar liv. Dess flytande
-                        hydrosfär är unik bland stenplaneterna och jorden är
-                        också den enda planeten hos vilken plattektonik har
-                        observerats. Jordens atmosfär skiljer sig markant från
-                        de andra planeternas, vilket förklaras av att närvaron
-                        av levande organismer har förändrat atmosfären till att
-                        innehålla fritt syre, i dag motsvarande 21 procent.
-                    </p>
+                    <p class="description--text"></p>
                 </section>
                 <section class="main--data">
                     <article class="data--circumference">
                         <h3 class="circumference__h3">OMKRETS</h3>
-                        <p class="circumference__p">40 075 km</p>
+                        <p class="circumference__p"></p>
                     </article>
                     <article class="data--distance">
                         <h3 class="distance__h3">KM FRÅN SOLEN</h3>
-                        <p class="distance__p">149 600 000 km</p>
+                        <p class="distance__p"></p>
                     </article>
                     <article class="data--max-temp">
                         <h3 class="max-temp__h3">MAX TEMPERATUR</h3>
-                        <p class="max-temp__p">60C</p>
+                        <p class="max-temp__p"></p>
                     </article>
                     <article class="data--min-temp">
                         <h3 class="min-temp__h3">MIN TEMPERATUR</h3>
-                        <p class="min-temp__p">-50C</p>
+                        <p class="min-temp__p"></p>
                     </article>
                 </section>
                 <section class="main--moons">
                     <h3 class="moons__h3">MÅNAR</h3>
-                    <p class="moons__p">Månen</p>
                 </section>
             </main>
 
