feat: Add and remove items to favourites list

--- a/planet.html
+++ b/planet.html
@@ -18,9 +18,9 @@
 
         <section class="content--container">
             <header class="header--container">
-                <h1 class="description--name">Jorden</h1>
-                <button class="favourite__button">Favourite</button>
-                <h2 class="description--latin">Tellus</h2>
+                <h1 class="description--name"></h1>
+                <button class="favourite__button"></button>
+                <h2 class="description--latin"></h2>
             </header>
 
             <main class="main--container">
