refactor: Change to American spelling of favourite

--- a/planet.html
+++ b/planet.html
@@ -19,7 +19,7 @@
         <section class="content--container">
             <header class="header--container">
                 <h1 class="description--name"></h1>
-                <button class="favourite__button"></button>
+                <button class="favorite__button"></button>
                 <h2 class="description--latin"></h2>
             </header>
 
