--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Solaris Space Center</title>
-        <link rel="stylesheet" href="index.css" />
-    </head>
 
-    <body>
-        <div class="container">
-            <h1>Solaris Space Center</h1>
-            <div class="planets">
-                <div class="planet sun" data-name="Sun"></div>
-                <div class="planet mercury" data-name="Mercury"></div>
-                <div class="planet venus" data-name="Venus"></div>
-                <div class="planet earth" data-name="Earth"></div>
-                <div class="planet mars" data-name="Mars"></div>
-                <div class="planet jupiter" data-name="Jupiter"></div>
-                <div class="planet saturn" data-name="Saturn"></div>
-                <div class="planet uranus" data-name="Uranus"></div>
-                <div class="planet neptune" data-name="Neptune"></div>
-            </div>
-        </div>
-        <script src="./app.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solaris</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div id="home-page">
+        <header>
+            <h1>Solsystemet, Solaris</h1>
+        </header>
+        <nav>
+            <ul id="planet-list">
+                <li class="planet sun" data-name="Sun"></li>
+                <li class="planet mercury" data-name="Mercury"></li>
+                <li class="planet venus" data-name="Venus"></li>
+                <li class="planet earth" data-name="Earth"></li>
+                <li class="planet mars" data-name="Mars"></li>
+                <li class="planet jupiter" data-name="Jupiter"></li>
+                <li class="planet saturn" data-name="Saturn"></li>
+                <li class="planet uranus" data-name="Uranus"></li>
+                <li class="planet neptune" data-name="Neptune"></li>
+            </ul>
+        </nav>
+        <a href="favorites.html" id="favorites-link">Favorites</a>
+    </div>
+    <script src="app.js"></script>
+</body>
+
 </html>
+
+
