--- a/Planet/planet.html
+++ b/Planet/planet.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <figure class="starry-background">
-            <img src="./assets/star-transparent.png" alt="Stars" />
+            <img src="../assets/star-transparent.png" alt="Stars" />
         </figure>
         <aside class="aside--container">
             <div class="aside--circle1"></div>
