--- a/Planet/planet.html
+++ b/Planet/planet.html
@@ -61,6 +61,7 @@
             </footer>
         </section>
 
+        <script src="../app.js"></script>
         <script src="./planet.js"></script>
     </body>
 </html>
