--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -9,12 +9,7 @@
   </head>
   <body>
     <h1>FAVORITER</h1>
-    <span class="back-wrapper">
-      <figure>
-        <img src="/assets/arrow-left.svg" alt="arrow pointing left" />
-      </figure>
-      <p>Tillbaka till förstasidan</p>
-    </span>
+    <button class="favorites-nav">PLANETS</button>
     <section class="favorites-card-wrapper"></section>
     <script src="/app.js"></script>
     <script src="./favorites.js"></script>
