--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="home-page">
         <header>
-            <h1>Solsystemet, Solaris</h1>
+            <h1>SOLSYSTEMET</h1>
+            <h2>SOLARIS</h2>
         </header>
         <nav>
             <ul id="planet-list">
@@ -21,7 +22,9 @@
                 <li class="planet earth" data-name="Earth"></li>
                 <li class="planet mars" data-name="Mars"></li>
                 <li class="planet jupiter" data-name="Jupiter"></li>
-                <li class="planet saturn" data-name="Saturn"></li>
+                <li class="planet saturn" data-name="Saturn">
+                  <div class="saturn-ring"></div>
+                </li>
                 <li class="planet uranus" data-name="Uranus"></li>
                 <li class="planet neptune" data-name="Neptune"></li>
             </ul>
@@ -32,5 +35,3 @@
 </body>
 
 </html>
-
-
