--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="favorites.css" />
   </head>
   <body>
-    <h1>FAVORITER</h1>
-    <button class="favorites-nav">PLANETS</button>
+    <header>
+      <h1>FAVORITER</h1>
+      <button class="favorites-nav">PLANETS</button>
+    </header>
     <section class="favorites-card-wrapper"></section>
     <script src="/app.js"></script>
     <script src="./favorites.js"></script>
