added a footer that aticks to the bottom

--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -13,6 +13,9 @@
       <button class="favorites-nav">PLANETS</button>
     </header>
     <section class="favorites-card-wrapper"></section>
+    <footer>
+      <p>&copyGroup 3</p>
+    </footer>
     <script src="/app.js"></script>
     <script src="./favorites.js"></script>
   </body>
