removed href in the HTML, now it works

--- a/Index/index.html
+++ b/Index/index.html
@@ -1,3 +1,5 @@
+<!-- HTML by Jonatan -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,7 +30,7 @@
           <li class="planet neptune" data-name="Neptune"></li>
         </ul>
       </nav>
-      <a href="favorites.html" id="favorites-link">Favorites</a>
+      <a id="favorites-link">Favorites</a>
     </div>
     <script src="app.js"></script>
     <script src="index.js"></script>
