--- a/index.html
+++ b/index.html
@@ -5,32 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solaris</title>
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="home-page">
         <header>
-            <h1>Solsystemet, Solaris</h1>
+            <h1>SOLSYSTEMET</h1>
+            <h2>SOLARIS</h2>
         </header>
         <nav>
             <ul id="planet-list">
-                <li class="planet sun" data-name="Sun"></li>
-                <li class="planet mercury" data-name="Mercury"></li>
-                <li class="planet venus" data-name="Venus"></li>
-                <li class="planet earth" data-name="Earth"></li>
-                <li class="planet mars" data-name="Mars"></li>
-                <li class="planet jupiter" data-name="Jupiter"></li>
-                <li class="planet saturn" data-name="Saturn"></li>
-                <li class="planet uranus" data-name="Uranus"></li>
-                <li class="planet neptune" data-name="Neptune"></li>
+                <li class="planet sun"></li>
+                <li class="planet mercury"></li>
+                <li class="planet venus"></li>
+                <li class="planet earth"></li>
+                <li class="planet mars"></li>
+                <li class="planet jupiter"></li>
+                <li class="planet saturn">
+                    <div class="ring-container">
+                        <div class="ring"></div>
+                </li>
+                <li class="planet uranus"></li>
+                <li class="planet neptune"></li>
             </ul>
         </nav>
-        <a href="favorites.html" id="favorites-link">Favorites</a>
+        <a href="favorites.html" id="favorites-link">
+            <img src="tenor.gif" alt="Favorites">
+        </a>
     </div>
     <script src="app.js"></script>
 </body>
 
 </html>
-
 
