fix: Favorites button on Index page

--- a/Index/index.html
+++ b/Index/index.html
@@ -33,8 +33,8 @@
 
             </ul>
         </nav>
-        <a href="favorites.html" id="favorites-link">
-            <img src="tenor.gif" alt="Favorites">
+        <a href="../Favorites/favorites.html" id="favorites-link">
+            <img src="../tenor.gif" alt="Favorites">
         </a>
     </div>
     <script src="app.js"></script>
