fix: Path to app.js fil

--- a/Index/index.html
+++ b/Index/index.html
@@ -37,7 +37,7 @@
             <img src="../tenor.gif" alt="Favorites">
         </a>
     </div>
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
     <script src="index.js"></script>
 </body>
 
