added message for no favorit planets

--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -12,7 +12,9 @@
       <h1>FAVORITER</h1>
       <button class="favorites-nav">PLANETS</button>
     </header>
-    <section class="favorites-card-wrapper"></section>
+    <main>
+      <section class="favorites-card-wrapper"></section>
+    </main>
     <footer>
       <p>&copyGroup 3</p>
     </footer>
